--- a/src/styles.css
+++ b/src/styles.css
@@ -8,14 +8,22 @@ body {
   
   .swiper {
     width: 100%;
-    height: 100%;
+    height: 100%;position: relative;
+    overflow: visible !important;
   }
   
 .slider-main-container {
   position: relative;
+  background: transparent;
+  z-index: 10;
 }
-
+.mySwiper2{
+  position: relative;
+}
   
+.mySwiper2 > .swiper-pagination-bullets {
+  bottom: -50px !important;
+}
   .swiper-slide {  
     /* Center slide text vertically */
     display: flex;
@@ -23,7 +31,7 @@ body {
     align-items: center;
   }
 
-  .nav-btn {
+  .nav-btn{
     display: block;
     position: absolute;
     z-index: 20;
@@ -34,7 +42,31 @@ body {
     border-radius: 5px;
     transition: background 0.5s ease;
 }
-
+  .nav-btn2{
+    display: block;
+    position: absolute;
+    z-index: 20;
+    user-select: none;
+    -webkit-user-select: none;
+    cursor: pointer;
+    padding: 2px;
+    border-radius: 5px;
+    overflow: hidden;
+    transition: background 0.5s ease;
+}
+.nav-btn1{
+  display: block;
+  position: absolute;
+  z-index: 20;
+  user-select: none;
+  overflow: hidden;
+  border-radius: 100%;  
+  border: 2px solid white;
+  -webkit-user-select: none;
+  cursor: pointer;
+  padding: 2px;
+  transition: background 0.5s ease;
+}
 .nav-btn:hover {
     background-color: rgb(255, 165, 0);
 }
@@ -48,7 +80,63 @@ body {
     right: 30em;
     top: 50%;
 }
+.nav-btn1:hover {
+    background-color: rgb(255, 165, 0);
+}
 
-  
+.nav-btn1.custom-prev-button1 {
+    top: 50%;
+    left: 0em;
+}
 
-  
+.nav-btn1.custom-next-button1 {
+    right: 0em;
+    top: 50%;
+}
+
+.nav-btn2.custom-prev-button2 {
+    top: 50%;
+    left: 0em;
+}
+
+.nav-btn2.custom-next-button2 {
+    right: 2em;
+    top: 50%;
+}
+
+  .swiper-pagination-bullets{
+ position: relative !important;
+ bottom: -90px !important;
+   
+  }
+.swiper-pagination{
+  z-index: 1000 !important;
+}
+.swiper-slide-active{
+  z-index: 10 !important;
+
+}
+.swiper-slide-active >div{
+  scale: 1.1;
+}
+.swiper-pagination-bullet{
+  padding: 5px !important;
+  background-color: white;
+}
+.swiper-pagination-bullet-active{
+  background-color: #FFD02B;
+}
+.swiper-pagination-lock{
+  display: block;
+}
+.mySwiper1 > .swiper-pagination{
+  z-index: 1000 !important;
+  top: 10px !important;
+}
+.mySwiper1 > .swiper-slide{
+  width: 100px !important;
+
+}
+.mySwiper2 > .swiper-slider{
+  width: 100px !important;
+}
